--- a/Notebooks/Fetching manuscripts.ipynb
+++ b/Notebooks/Fetching manuscripts.ipynb
@@ -9695,6 +9695,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The size of the intersection to our database. In other words the number of scripts that correspond to a movie in our taggle database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
@@ -10750,11 +10757,13 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Renaming data"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
