--- a/Notebooks/GetAdditionalData_GAG.ipynb
+++ b/Notebooks/GetAdditionalData_GAG.ipynb
@@ -25,7 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "movies_to_delete =[\n",
+    "    'National Lampoon\\xe2\\x80\\x99s Van Wilder',\n",
+    "    'Br\\xc3\\xbcno',\n",
+    "    'Pok\\xc3\\xa9mon: Spell of the Unknown',\n",
+    "    'Alien\\xc2\\xb3',\n",
+    "    'Guten Tag, Ram\\xc3\\xb3n'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -40,6 +57,8 @@
     "    reader = csv.DictReader(csvfile, delimiter=\",\")\n",
     "    for row in reader:\n",
     "        tmdb_5000_movies[row[\"title\"]] = row\n",
+    "# Next we delete the movie id because the database does not contain any info about that movie\n",
+    "#del tmdb_5000_movies['id']\n",
     "        \n",
     "for title in sorted(tmdb_5000_movies.keys()):\n",
     "    title = title.replace(\" \",\"-\").replace(\"(\",\"\").replace(\")\",\"\")"
@@ -47,16 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -18304,7 +18314,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Adding the imdb values manually that failed when scraping the imdb website\n",
+    "\n",
+    "Imdb_5000_movies_withid[\"161795\"] = '7.2'\n",
+    "Imdb_5000_movies_withid[\"8859\"] = '5.5'\n",
+    "Imdb_5000_movies_withid[\"11452\"] = 'None'\n",
+    "Imdb_5000_movies_withid[\"10681\"] = '8.4'\n",
+    "Imdb_5000_movies_withid[\"10991\"] = 'None'\n",
+    "Imdb_5000_movies_withid[\"37137\"] = '6.8'\n",
+    "Imdb_5000_movies_withid[\"18480\"] = 'None'\n",
+    "Imdb_5000_movies_withid[\"8077\"] = 'None'\n",
+    "Imdb_5000_movies_withid[\"10664\"] = '7.5'\n",
+    "Imdb_5000_movies_withid[\"11661\"] = '7.8'\n",
+    "Imdb_5000_movies_withid[\"82695\"] = '7.6'\n",
+    "Imdb_5000_movies_withid[\"333355\"] = '8.0'\n",
+    "Imdb_5000_movies_withid[\"41009\"] = '6.4'\n",
+    "Imdb_5000_movies_withid[\"1391\"] = '7.7'\n",
+    "Imdb_5000_movies_withid[\"242575\"] = 'None'\n",
+    "Imdb_5000_movies_withid[\"36593\"] = '6.5'\n",
+    "Imdb_5000_movies_withid[\"335244\"] = '6.9'\n",
+    "Imdb_5000_movies_withid[\"64499\"] = '7.7'\n",
+    "Imdb_5000_movies_withid[\"38570\"] = '2.6'\n",
+    "Imdb_5000_movies_withid[\"301325\"] = '3.1'\n",
+    "Imdb_5000_movies_withid[\"194\"] = '8.3'\n",
+    "Imdb_5000_movies_withid[\"304410\"] = '7.4'\n",
+    "Imdb_5000_movies_withid[\"11011\"] = '5.3'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -18312,15 +18357,15 @@
    "source": [
     "import json\n",
     "\n",
-    "result_file_uri = \"/Users/GretarAtli/Dropbox/SocialGraph/results/imdb-score.json\"\n",
+    "result_file_uri = \"/Users/GretarAtli/Dropbox/SocialGraph/results/imdb-score-mod.json\"\n",
     "\n",
-    "#with open(result_file_uri, 'w') as fp:\n",
-    "#    json.dump(Imdb_5000_movies, fp)\n"
+    "with open(result_file_uri, 'w') as fp:\n",
+    "    json.dump(Imdb_5000_movies_withid, fp)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -18328,38 +18373,44 @@
     {
      "data": {
       "text/plain": [
-       "4801"
+       "4797"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(tmdb_5000_movies.keys())"
+    "len(Imdb_5000_movies_withid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Get IMDB rating form file **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tmdb_5000_movies['id']"
+    "# Getting Imdb scores from data and convert the id to name \n",
+    "json1_file = open(result_file_uri)\n",
+    "json1_str = json1_file.read()\n",
+    "Imdb_5000_movies_withid = json.loads(json1_str)\n",
+    "\n",
+    "Imdb_5000_movies = defaultdict(float)\n",
+    "\n",
+    "# change the dictionary key from id to name of the movie\n",
+    "for key,value in Imdb_5000_movies_withid.items():\n",
+    "    name = findMovieNameFromId(key)\n",
+    "    Imdb_5000_movies[name] = (value,key)\n"
    ]
   },
   {
@@ -18370,6 +18421,127 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(key,value) for key, value in Imdb_5000_movies.items() if value[0] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, u'301325')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Imdb_5000_movies[\"#Horror\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'budget': '10000000',\n",
+       " 'genres': '[{\"id\": 35, \"name\": \"Comedy\"}, {\"id\": 10749, \"name\": \"Romance\"}]',\n",
+       " 'homepage': 'http://www.die-fabelhafte-welt-der-amelie.de',\n",
+       " 'id': '194',\n",
+       " 'keywords': '[{\"id\": 90, \"name\": \"paris\"}, {\"id\": 128, \"name\": \"love triangle\"}, {\"id\": 365, \"name\": \"ghost train\"}, {\"id\": 366, \"name\": \"sex-shop\"}, {\"id\": 367, \"name\": \"shyness\"}, {\"id\": 1407, \"name\": \"montmartre\"}, {\"id\": 5600, \"name\": \"daughter\"}, {\"id\": 5972, \"name\": \"garden gnome\"}, {\"id\": 5973, \"name\": \"journey round the world\"}, {\"id\": 6025, \"name\": \"photography\"}]',\n",
+       " 'original_language': 'fr',\n",
+       " 'original_title': \"Le fabuleux destin d'Am\\xc3\\xa9lie Poulain\",\n",
+       " 'overview': 'At a tiny Parisian caf\\xc3\\xa9, the adorable yet painfully shy Am\\xc3\\xa9lie (Audrey Tautou) accidentally discovers a gift for helping others. Soon Amelie is spending her days as a matchmaker, guardian angel, and all-around do-gooder. But when she bumps into a handsome stranger, will she find the courage to become the star of her very own love story?',\n",
+       " 'popularity': '73.720244',\n",
+       " 'production_companies': '[{\"name\": \"France 3 Cin\\\\u00e9ma\", \"id\": 591}, {\"name\": \"Claudie Ossard Productions\", \"id\": 592}, {\"name\": \"MMC Independent\", \"id\": 4411}, {\"name\": \"Canal+\", \"id\": 5358}, {\"name\": \"Tapioca Films\", \"id\": 12000}, {\"name\": \"Sofica Sofinergie 5\", \"id\": 23446}, {\"name\": \"Victoires Productions\", \"id\": 25020}, {\"name\": \"Filmstiftung Nordrhein-Westfalen\", \"id\": 27897}, {\"name\": \"Union G\\\\u00e9n\\\\u00e9rale Cin\\\\u00e9matographique (UGC)\", \"id\": 30994}]',\n",
+       " 'production_countries': '[{\"iso_3166_1\": \"FR\", \"name\": \"France\"}, {\"iso_3166_1\": \"DE\", \"name\": \"Germany\"}]',\n",
+       " 'release_date': '2001-04-25',\n",
+       " 'revenue': '173921954',\n",
+       " 'runtime': '122',\n",
+       " 'spoken_languages': '[{\"iso_639_1\": \"fr\", \"name\": \"Fran\\\\u00e7ais\"}, {\"iso_639_1\": \"ru\", \"name\": \"P\\\\u0443\\\\u0441\\\\u0441\\\\u043a\\\\u0438\\\\u0439\"}]',\n",
+       " 'status': 'Released',\n",
+       " 'tagline': 'One person can change your life forever.',\n",
+       " 'title': 'Am\\xc3\\xa9lie',\n",
+       " 'vote_average': '7.8',\n",
+       " 'vote_count': '3310'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmdb_5000_movies['Am\\xc3\\xa9lie']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We use the fact that we know that each movie has a name, so we do not include any error handling\n",
+    "def findMovieNameFromId(id):\n",
+    "    name = [key for key,info in tmdb_5000_movies.items() if info['id'] == id]\n",
+    "    return name[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bad Moms'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findMovieNameFromId(Imdb_5000_movies.keys()[0])"
+   ]
   },
   {
    "cell_type": "code",
