Get_additional_data Ready

--- a/Notebooks/Get_Additional_Data.ipynb
+++ b/Notebooks/Get_Additional_Data.ipynb
@@ -35,7 +35,9 @@
     "- **IMDB storyline for each movie in the dataset**\n",
     "- ** Download all manuscripts from the www.imsdb.com website**, 1116 movie manuscripts in total. \n",
     "\n",
-    "We also downloaded the movie reviews from the website http://ai.stanford.edu/~amaas/data/sentiment/. The code as well as analysis of the movie reviews can be found in the notebook sentiment reviews"
+    "\n",
+    "\n",
+    "**Note** We also downloaded the movie reviews from the website http://ai.stanford.edu/~amaas/data/sentiment/. The code as well as analysis of the movie reviews can be found in the notebook sentiment reviews"
    ]
   },
   {
