--- a/Notebooks/explainer_notebook.ipynb
+++ b/Notebooks/explainer_notebook.ipynb
@@ -60,6 +60,10 @@
     "\n",
     "While this dataset has a lot to offer we decided to gather a bit more data ourselves. We had user rating and storyline (called overview in the tmdb databse) from TMDb but we also wanted to look at user ratings and the storyline from IMDb (Internet Movie Database) as they have much more votes and thus are more realistic.\n",
     "\n",
+    "** Data cleaning and preprocessing **\n",
+    "\n",
+    "There where couple of movies in the database that lacked some informations. What we did is simply to check whether all of the data that we needed for each analysis was there and if not we ignored the movie from the analysis. This dataset is quite good and there are not many movies that lack data therefore we did not need to do much of an preprocessing of the dataset. \n",
+    "\n",
     "\n",
     "### User rating and storyline from IMDB \n",
     "\n",
@@ -75,17 +79,39 @@
     "\n",
     "### Manuscripts\n",
     "\n",
-    "Now we wanted to add some text analysis to our recommendation engine, to do that we decided to find some movie scripts and see if we could find some interesting connections between the movie data we had and the movie’s scripts and also use the scripts to find similarities. We again found a script online that downloadeds all the manuscripts on the website [The Internet Movie Script Database (IMSDb)](http://www.imsdb.com/). This code was taken from the [this github repository](https://github.com/j2kun/imsdb_download_all_scripts) and adapted to our needs. Our code can be found in in the [Get_additional_data notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Get_Additional_Data.ipynb). \n",
+    "We wanted to add some text analysis to our recommendation engine, to do that we decided to find some movie manuscripts and see if we could find some interesting connections between the movie data we had and the movie’s scripts and also use the scripts to find similarities. We found a script online that downloadeds all the manuscripts that can be found on the website [The Internet Movie Script Database (IMSDb)](http://www.imsdb.com/). This code was taken from [this github repository](https://github.com/j2kun/imsdb_download_all_scripts) and adapted to our needs. Our code can be found in in the [Get_additional_data notebook](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/blob/master/Notebooks/Get_Additional_Data.ipynb). The code uses the modules BeautifulSoup and urllip to scrape the IMSDb website and download the files. \n",
     "\n",
-    "The total amount of manuscripts in IMSdb is only 1122 manuscripts and the intersection with our kaggle dataset is 686 manuscripts. Therefore we only manage to find manuscript for 686 movies out of the 4800 movies that we have in our dataset. \n",
+    "The total amount of manuscripts in IMSDb website is only 1122 manuscripts and the intersection with our kaggle dataset is 686 manuscripts. Therefore we only manage to find manuscript for 686 movies out of the 4800 movies that we have in our dataset. \n",
     "\n",
-    "The total size of the manuscript dataset is 232,6 MB and can be downloaded here\n",
-    "\n",
-    "\n",
+    "The total size of the manuscript dataset is 232,6 MB and can be downloaded [here](https://github.com/gretarg09/Dtu-SocialGraphs-FinalProject/tree/master/Data)\n",
     "\n",
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Users Reviews\n",
+    "\n",
+    "To add even more to our text analysis portion we decided to look at some user reviews. We found a data set that contained a 100.000 user reviews from IMDb on some 14.000 movies. The dataset is available at: http://ai.stanford.edu/~amaas/data/sentiment/. The dataset only contained the movie’s IMDb ID which we didn’t have so we again needed to do some scraping, this time we used the IMDb IDs to get the title of the movies so we could link them to our TMDb dataset. That resulted in around 14.000 reviews for around 1.200 movies that were common with our 4800 gotten from the Kaggle dataset. The scripts and reviews were only applicable to a subset of our Kaggle dataset.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tools, Theory and Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "TAlA um þetta seinna\n",
     "\n",
     "It was clear to us that we where not able to use this in our recommendation engine because we did not have information about each movie in the dataset. We still manage to get manuscripts for 686 movies in our dataset and we decided to analyse these manuscript thoroughly with the goal of finding out if we could use these \n",
@@ -93,7 +119,7 @@
     "\n",
     "\n",
     "\n",
-    "***Grétar, hvernig sóttiru scripts???***. To add even more to our text analysis portion we decided to look at some user reviews. We found a data set that contained a 100.000 user reviews from IMDb on some 14.000 movies. The dataset is available at: http://ai.stanford.edu/~amaas/data/sentiment/. The dataset only contained the movie’s IMDb ID which we didn’t have so we again needed to do some scraping, this time we used the IMDb IDs to get the title of the movies so we could link them to our TMDb dataset. That resulted in around 14.000 reviews for around 1.200 movies that were common with our 5.000 gotten from the TMDb dataset. The scripts and reviews were only applicable to a subset of our big movie dataset. This was a problem as we didn’t want to make a recommendation engine that only contained a bit more than a 1.000 movies. We however did a thorough analysis of the scripts to make a proof of concept that it could’ve been used as input into our recommendation engine. We after that decided to get more text data. We thought about what we could use other than scripts and reviews to try and find similarities between movies and ended up with trying to use the movie’s storyline. This was data we didn’t have, so once again we turned to scraping. We had the help of a library called ‘beautifulsoup’. After this we finally had some nice juicy text to use in our engine.\n",
+    "***Grétar, hvernig sóttiru scripts???***.  This was a problem as we didn’t want to make a recommendation engine that only contained a bit more than a 1.000 movies. We however did a thorough analysis of the scripts to make a proof of concept that it could’ve been used as input into our recommendation engine. We after that decided to get more text data. We thought about what we could use other than scripts and reviews to try and find similarities between movies and ended up with trying to use the movie’s storyline. This was data we didn’t have, so once again we turned to scraping. We had the help of a library called ‘beautifulsoup’. After this we finally had some nice juicy text to use in our engine.\n",
     "\n",
     "The end goal was a movie recommendation engine where a user could write in a movie and we would recommend similar movies the user might like. We wanted to function quite well and even use it ourselves. We’ve all spent a lot of time in our lives trying to decide on a movie to watch. The recommendation engine will use shortest path calculations on a network that we design. There will be multiple things affecting the links between movies, e.g. cast of movies, keywords, genres, directors, IMDb ratings and similarities in storylines. \n"
    ]
