Hringur late night checkin zzz

--- a/Notebooks/Get_Additional_Data.ipynb
+++ b/Notebooks/Get_Additional_Data.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# lets start by getting the data\n",
@@ -31,13 +29,13 @@
     "\n",
     "In this notebook we gather additional data to support our analysis of the Kaggle movie dataset. The additional data is the following\n",
     "\n",
-    "- **IMDB rating for each movie in the dataset**\n",
-    "- **IMDB storyline for each movie in the dataset**\n",
-    "- ** Download all manuscripts from the www.imsdb.com website**, 1116 movie manuscripts in total. \n",
+    "- **IMDb rating for each movie in the dataset**\n",
+    "- **IMDb storyline for each movie in the dataset**\n",
+    "- ** Download all manuscripts from the www.imsdb.com website, 1116 movie manuscripts in total. **\n",
     "\n",
     "\n",
     "\n",
-    "**Note** We also downloaded the movie reviews from the website http://ai.stanford.edu/~amaas/data/sentiment/. The code as well as analysis of the movie reviews can be found in the notebook sentiment reviews"
+    "**Note** We also downloaded the movie reviews from the website http://ai.stanford.edu/~amaas/data/sentiment/. The code as well as analysis of the movie reviews can be found in the notebook 'Sentiment_reviews'"
    ]
   },
   {
@@ -48,6 +46,7 @@
    },
    "outputs": [],
    "source": [
+    "#These are movies we couldn't find the IMDb rating for or they were missing crucial data in the Kaggle dataset\n",
     "movies_to_delete =[\n",
     "    'National Lampoon’s Van Wilder',\n",
     "    'Bran Nue Dae',\n",
@@ -60,9 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
@@ -100,21 +97,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "source": [
-    "# Scrape the IMDB website for IMDB ratings\n",
+    "# Scrape the IMDb website for IMDb ratings\n",
     "\n",
-    "The following code uses the BeautifulSoup module in python to get the imdb rating for each movie in our kaggle database. The code scrapes the [imdb](http://www.imdb.com/) websites and collects the rating for each movie and saves it to a dictionary. We then save the dictionary as a json file. "
+    "The following code uses the BeautifulSoup module in python to get the IMDb rating for each movie in our Kaggle dataset. The code scrapes the [IMDb](http://www.imdb.com/) website and collects the rating for each movie and saves it to a dictionary. We then save the dictionary as a json file."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -14557,7 +14551,7 @@
     "        return rating\n",
     "    except:\n",
     "        return 0\n",
-    " \n",
+    "\n",
     "Imdb_5000_movies = defaultdict(float)\n",
     "\n",
     "for i,title in enumerate(sorted(tmdb_5000_movies.keys())):\n",
@@ -14572,17 +14566,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Save IMDB rating to file**\n",
+    "**Save IMDb ratings to file**\n",
     "\n",
-    "Adding the imdb values manually that failed when scraping the imdb website. There where some movies that failed when we tried to scrape the imdb website. These movies where added manually, if imdb did not have any information about the movie then we simply assign the value none to those movies and then in the analysis we ignore these movies. These movies are only 5 and therefore we did not consider this to be a major problem."
+    "Adding the IMDb values manually that failed when scraping the imdb website. There where some movies that failed when we tried to scrape the IMDb website. These movies where added manually, if IMDb did not have any information about the movie then we simply assign the value 'None' to those movies and then in the analysis we ignore these movies. These movies are only 5 and therefore we did not consider this to be a major problem."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Imdb_5000_movies_withid[\"161795\"] = '7.2'\n",
@@ -14629,6 +14621,7 @@
     "\n",
     "result_file_uri = \"/Users/GretarAtli/Dropbox/SocialGraph/results/imdb-score-mod.json\"\n",
     "\n",
+    "#This is commented out as to not repeat\n",
     "#with open(result_file_uri, 'w') as fp:\n",
     "#    json.dump(Imdb_5000_movies_withid, fp)\n"
    ]
@@ -14636,9 +14629,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -14659,7 +14650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Get IMDB rating from file **"
+    "** Get IMDb rating from file **"
    ]
   },
   {
@@ -14679,9 +14670,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "result_file_uri = \"/Users/GretarAtli/Dropbox/SocialGraph/results/imdb-score-mod.json\"\n",
@@ -14706,17 +14695,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scrape the IMDB website for IMDB story line\n",
+    "# Scrape the IMDb website for IMDb story line\n",
     "\n",
-    "The following code uses the BeautifulSoup module in python to get the imdb storyline for each movie in our kaggle database. The code scrapes the [imdb](http://www.imdb.com/) websites and collects the storyline for each movie and saves it to a dictionary. We then save the dictionary as a json file.  "
+    "The following code uses the BeautifulSoup module in python to get the IMDb storyline for each movie in our Kaggle database. The code scrapes the [IMDb](http://www.imdb.com/) website and collects the storyline for each movie and saves it to a dictionary. We then save the dictionary as a json file.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -24379,8 +24366,6 @@
     "    except Exception as e:\n",
     "        print e\n",
     "        return 0\n",
-    " \n",
-    "#getImdbStoryLine('10 Cloverfield Lane')\n",
     "\n",
     "Imdb_5000_storyline = defaultdict(str)\n",
     "\n",
@@ -24396,15 +24381,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Save IMDB storyline to file **"
+    "** Save IMDb storyline to file **"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -24417,14 +24400,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Download all manuscripts from imsdb.com\n",
     "\n",
-    "This is a python code that downloads (and clean) all \n",
-    "scripts on the website [http://www.imsdb.com](http://www.imsdb.com).\n",
+    "This is a python code that downloads (and cleans) all \n",
+    "scripts on the website [IMSDb](http://www.imsdb.com).\n",
     "\n",
     "This code was taken from the [this github repository](https://github.com/j2kun/imsdb_download_all_scripts) and adapted to our needs. "
    ]
@@ -24507,9 +24488,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -24521,7 +24502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
