Hringur - yfirferð done

--- a/Notebooks/basic_stats_GAG.ipynb
+++ b/Notebooks/basic_stats_GAG.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -46,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get data line by line from tmdb-5000-movie-database and save the data as dictionary\n",
@@ -84,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result_file_uri = \"/Users/GretarAtli/Dropbox/SocialGraph/results/imdb-score-mod-mod.json\"\n",
@@ -92,7 +98,6 @@
     "# Getting Imdb scores from data and convert the id to name \n",
     "\n",
     "with open(result_file_uri) as json1_file:\n",
-    "#json1_file = open(result_file_uri)\n",
     "    json1_str = json1_file.read()\n",
     "    Imdb_5000_movies_withid = json.loads(json1_str)\n",
     "\n",
@@ -113,7 +118,7 @@
    "source": [
     "#  Correlation \n",
     "\n",
-    "In this section we will investigate the correlation between different variables in our kaggle dataset. To make the analysis a little bit more interesting we added the information about the IMDb rating of each movie. There are some movies that either are missing some values in the kaggle database or they do not have a IMDb rating. We excluded those movies, 6 in total out of 4800 movies. We visualize the findings in a heatmap which shows the correlation coefficients between each pair of variables."
+    "In this section we will investigate the correlation between different variables in our kaggle dataset. To make the analysis a little bit more interesting we added the information about the IMDb rating of each movie. There are some movies that either are missing some values in the Kaggle dataset or they do not have a IMDb rating. We excluded those movies, 3 in total out of 4800 movies. We visualize the findings in a heatmap which shows the correlation coefficients between each pair of variables."
    ]
   },
   {
@@ -183,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Calculate correlation between each variable\n",
@@ -239,7 +246,7 @@
     "** Some thoughts: **\n",
     "\n",
     " - The correlation between the TMDb rating and the IMDb rating is interesting, there seems to be less positive correlation between these values than one would expect. This is most likely do to the fact that the TMDb rating is based on much less data, fewer votes on average, than the IMDb rating. Based on these informations we decided to only use the IMDb ratings in further analysis of the dataset. \n",
-    " - Budget and revenue is highly positive correlated which means that if a movie has a high budget then the movie is more likely to get higher revenue in the end. Like everyone knows, you need to spend money to make money.\n",
+    " - Budget and revenue is highly correlated which means that if a movie has a high budget then the movie is more likely to get higher revenue in the end. Like everyone knows, you need to spend money to make money.\n",
     " -  Popularity is also quite correlated with revenue which is something that one could expect. However you would expect the correlation to be higher than 0.64.\n",
     " - Duration is also sligthly positive correlated with number of actors. The movie industry gets bigger and bigger each year and therefore the size of the cast of the \"newer movies\" is bigger than for the \"older movies\". Here it needs to be taken into account that we have much fewer movies that can be considered to be old in our database. Therefore the correlation is not as much as you would expect but still there is some positive correlation between these variables."
    ]
